--- a/services/explanation-service/package.json
+++ b/services/explanation-service/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "ai": "^6.0.68",
-    "@ai-sdk/openai": "^3.0.25"
+    "@ai-sdk/openai": "^3.0.25",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest"
